ADD: 날짜별 모든 인증 조회 TEST Code 추가 -  getCertsByDateWithoutUserTest 추가